# blog

./: .gitignore  README.md  Untitled.js  config.toml  config.yml  hugo.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: NotionImport.yml  cd.yml  cloudflare-cleanup.yml  gh-pages.yml  google-drive-access.yml  main.yml
archetypes/: posts.md
assets/css/common/: header.css  main.css  post-single.css
assets/css/core/: reset.css  theme-vars.css
config/development/: hugo.yml
config/production/: hugo.yml
content/: profile.md  terms.md  test1.md  test2.md
content/debug/css-test/: index.md
content/debug/style-test/: index.md
content/posts/: test1.md  test2.md  test3.md
content/posts/blog/Github Pagesでカスタムドメインを使う/: index.md
content/posts/created-this-blog/: index.md
content/posts/ghpages-use-customdomain/: index.md
content/posts/papermod-css-beforeheader/: index.md
content/posts/papermod-css-customize/: index.md
content/posts/switch-ga-to-gtm-on-hugo/: index.md
gdrive_sync/: main.py  pyproject.toml
layouts/: sitemap.xml
layouts/_default/: archives.html  baseof.html
layouts/partials/: footer.html  gtm.html  head.html  header.html  post_meta.html
layouts/partials/templates/: opengraph.html  twitter_cards.html
public/: 404.html  index.html
public/archives/: index.html
public/categories/: index.html
public/tags/: index.html
public/tags/first/: index.html
public/test1/: index.html
public/test2/: index.html
themes/PaperModMod/: theme.toml
(+11 files in other folders)
